--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 # SLAC Release Notes for diagTimer
 #
+R1.9.3: 2020-01-08      Laura King
+        Testing for jenkins automation. Includes tags created to trigger builds.
+
 R1.9.3: 2020-12-04	Bruce Hill
 	Fix typo re _POSIX_CPUTIME
 
