--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,7 +2,7 @@
 # SLAC Release Notes for diagTimer
 #
 R1.9.3: 2020-02-03      Laura King
-        Testing for jenkins automation. Includes many test tags created to trigger module builds.
+        Testing for jenkins automation - Includes many test tags created to trigger module builds.
 
 R1.9.3: 2020-12-04	Bruce Hill
 	Fix typo re _POSIX_CPUTIME
